# shanghaitech-ids-passkey

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: custom_serializer_json.py  encrypt_keystore_external.py  graduate_course_choose.py  login_http.py
src/shanghaitech_ids_passkey/: __init__.py  __main__.py  _cli.py  _ids_api.py  _serde.py  _utils.py  _webauthn.py  client.py  config.py  errors.py  keystore.py  selenium_bind.py
tests/: __init__.py  helpers.py  test_cli.py  test_client.py  test_imports.py  test_keystore.py  test_selenium_bind.py
